// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render message with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     expense(s) with the total of 
    $6.00
  </h1>
</div>
`;

exports[`should render message with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense(s) with the total of 
    $2.00
  </h1>
</div>
`;

exports[`should render message without expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     expense(s) with the total of 
    $0.00
  </h1>
</div>
`;
